# DQ_agent

./: .gitignore  README.md
backend/: .env.example  api.py  main.py  pyproject.toml
backend/data/: column_metadata.txt  dq_rules.txt
backend/src/dq_agent/: __init__.py  graph.py  state.py  thread_manager.py
backend/src/dq_agent/api/: __init__.py  models.py  rules_routes.py  thread_routes.py  utils.py
backend/src/dq_agent/nodes/: __init__.py  code_executor.py  code_generator.py  code_validator.py  load_data.py  result_formatter.py  rule_generator.py
docs/: backend-genai-guide.md
frontend/: package-lock.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ChatMessage.tsx  CodeMessage.tsx  InputArea.tsx  ResultsMessage.tsx  RuleItem.tsx  RulesConfirmation.tsx  index.ts
frontend/src/hooks/: index.ts  useDQStream.ts  useInputState.ts
